minio-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-04-22T22-12-26Z
          args:
            - "server"
            - "/storage"
            - "--address"
            - ":9000"
            - "--console-address"
            - ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources:
            requests:
              cpu: "10m"
              memory: "320Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: storage
              mountPath: "/storage"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-storage
        - name: policy-config
          configMap:
            name: minio-policy
